# json_testing

./: README.md
dv_json_rd_wr/: JSON_PROCESS_LOG.txt  MY_REPORT.TXT  MakeFile  cjson_mngr.cpp  dv_json_rd_wr.cpp  make  new_report_name.txt  readme.txt
dv_json_rd_wr/binaries/: CMakeCache.txt
dv_json_rd_wr/docs/: README.md
dv_json_rd_wr/include/: json_mngr.h
dv_json_unit_test/: MakeFile  UNIT_TEST_LOG  bad_json.json  dv_json_unit_test.cpp  my_vscode_workspace.code-workspace  readme.txt
include/: LOG.H  json_mngr.h
src/: CMakeLists.txt  cjson_mngr.cpp  json_rd_wr.cpp
utest/: CMakeLists.txt  input.json  input01.json  json_unit_test.cpp
